# dali-rs

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
src/: client.rs  lib.rs
